# DriftingLibraryDesktop

./: .gitignore  CMakeLists.txt  README.md  README.zh.md
src/: CMakeLists.txt  backend.cpp  backend.hpp  library.hpp  main.cpp
src/model/: entrances_model.cpp  entrances_model.hpp  library_model.cpp  library_model.hpp  manga_content_model.cpp  manga_content_model.hpp  manga_metadata_model.cpp  manga_metadata_model.hpp  manga_model.cpp  manga_model.hpp  manga_tag_model.cpp  manga_tag_model.hpp  tag_filter.hpp  util.cpp  util.hpp
src/model/local/: library_model.cpp  library_model.hpp  manga_model.cpp  manga_model.hpp
src/model/remote/: library_model.cpp  library_model.hpp  manga_model.cpp  manga_model.hpp
src/view/: BrowserChapterDepth0.qml  BrowserChapterDepth1.qml  BrowserChapterDepth2.qml  BrowserChapterGrid.qml  BrowserMangaGrid.qml  ButtonGrid.qml  Entry.qml  ImagePreview.qml  MainWindow.qml  PageDetail.qml  PageLibrary.qml  PageReader.qml  Pages.qml  Tag.qml  TagEntry.qml  resources.qrc
src/view_model/: manga_detail_view_model.cpp  manga_detail_view_model.hpp  manga_library_view_model.cpp  manga_library_view_model.hpp  manga_list_view_model.cpp  manga_list_view_model.hpp  manga_reader_view_model.cpp  manga_reader_view_model.hpp  tag_filter.hpp  tag_view_model.cpp  tag_view_model.hpp  util.cpp  util.hpp
